# diagnosis-predictor-system

./: README.md
api-gateway/: .env  .env.example  .gitignore  Dockerfile  Makefile  Readme.md  go.mod  go.sum
api-gateway/cmd/app/: main.go
api-gateway/deploys/debug/: .env  docker-compose.yaml
api-gateway/internal/config/: config.go
api-gateway/internal/middleware/: error.go  request_id.go
api-gateway/internal/server/: server.go  test_model.go  text_model.go
api-gateway/pkg/broker/: client.go  nats.go
api-gateway/pkg/logger/: context.go  logger.go
basic_predictor/: .env  pyproject.toml
basic_predictor/app/: __main__.py  app.py  settings.py
basic_predictor/app/model/basic_model/: basic_model.py
basic_predictor/app/model/basic_model/json/: descr_ru_to_eng.json  description.json  disease_eng_to_ru.json  precaution.json  severity_weights.json  symp_eng_to_ru.json  symp_ru_to_eng.json
frontend/: package-lock.json
frontend/src/routes/: +layout.svelte  +page.svelte  Header.svelte  (+2 more)
model/: model-2-hd-parser.ipynb  model.ipynb  proc-and-learn-2.ipynb  processing-and-learning.ipynb
model/json/: descr_eng_to_ru.json  descr_ru_to_eng.json  description.json  disease_eng_to_ru.json  disease_ru_to_eng.json  precaution.json  precs_eng_to_ru.json  precs_ru_to_eng.json  symp_eng_to_ru.json  symp_ru_to_eng.json
model/model/: model2_rf.pkl
text_predictor/: .env  .gitignore  pyproject.toml
text_predictor/app/: app.py  settings.py
text_predictor/app/model/text_model/: text_model.py
text_predictor/app/model/text_model/enc/: encoder_hd.pkl  scaler_hd.pkl
(+3 files in other folders)
