[tool.poetry]
name = "basic_predictor"
version = "0.1.0"
description = ""
authors = ["Daniil Mukovskiy"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.95.1"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
scikit-learn = "1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
