[tool.poetry]
name = "text_predictor"
version = "0.1.0"
description = ""
authors = ["Daniil Mukovskiy <dm@modumlab.com>"]

[tool.poetry.dependencies]
python = "^3.9"
spacy = "^3.5.3"
fastapi = "^0.95.2"
pandas = "^2.0.2"
joblib = "^1.2.0"
scikit-learn = "1.0.2"
uvicorn = {extras = ["standard"], version = "^0.22.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
